--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@quasar/vite-plugin": "^1.10.0",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "sass": "^1.97.3",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.17.0",
+        "@vitejs/plugin-vue": "^6.0.4",
+        "quasar": "^2.18.6",
+        "slugify": "^1.6.6",
+        "vue": "^3.5.27",
+        "vue-router": "^5.0.2",
+        "vuedraggable": "^4.1.0"
     }
 }
